--- a/PSTAT131 - HW1.Rmd
+++ b/PSTAT131 - HW1.Rmd
@@ -124,20 +124,92 @@ mpg %>%
   geom_point()
 ```
 
-
-```{r}
-mpg %>%
-  ggplot(aes(x = hwy, y = cty)) +
-  geom_point()
-```
+Certainly, it appears that the correlation between highway mileage and city mileage are positively linear correlated. It should be noted that the points appear to be organized in a grid-like arrangement. It means that when the hwy increases, the cty will also increase.
 
 
 ### Exercise 3:
 Make a bar plot of `manufacturer`. Flip it so that the manufacturers are on the y-axis. Order the bars by height. Which manufacturer produced the most cars? Which produced the least?
 
 ```{r}
+mpg %>% 
+ ggplot(aes(x = forcats::fct_infreq(manufacturer))) +
+ geom_bar() +
+ coord_flip()
+```
 
+Dodge produced the most cars, which is almost 40
+Lincoln produced the least car, which is less than 5.
+
+
+### Exercise 4:
+Make a box plot of hwy , grouped by cyl . Do you see a pattern? If so, what?
+
+```{r}
+mpg %>% 
+ ggplot(aes(x = hwy, y = factor(cyl))) +
+ geom_boxplot() +
+ xlab("Highway Mileage") +
+ ylab("Cylinders")
+```
+
+Yes, the highway mileage does tend to decrease as the number of cylinders rises. On average, four-cylinder cars get the highest mileage. The average for five-cylinder automobiles is close, but there are a lot less five-cylinder cars in the data set.
+
+
+### Exercise 5:
+Use the corrplot package to make a lower triangle correlation matrix of the mpg dataset. 
+
+Since there are some categorical variables in the data set, you can decide how to deal with these. One way is simply to exclude them from the plot, which is what is done here.
+
+Which variables are positively or negatively correlated with which others? Do these relationships make
+sense to you? Are there any that surprise you?
+```{r}
+#install.packages("corrplot")
+library(corrplot)
+mpg %>% 
+  select(is.numeric) %>% 
+  cor() %>% 
+  corrplot(type = "lower")
 ```
 
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+The displ is positively associated withe year and cyl, but negatively associated with cty and hwy. 
+The year is negatively associated with cty, but positively associated with hwy and cyl. 
+The cyl is negatively associated with cy and hwy.
+The cty is positively associated with hwy.
+
+The results make sense and not surprise to me.
+
+### Exercise 6:
+Recreate the following graphic, as closely as you can. Hint: Use the ggthemes package.
+
+```{r}
+#install.packages("ggthemes")
+library(ggthemes)
+mpg %>%
+ ggplot() +
+ geom_boxplot(mapping = aes(x = class, y = hwy)) +
+ geom_jitter(mapping = aes(x = class, y = hwy), 
+ alpha = .25, 
+ height = 0) +
+ theme_gdocs() +
+ labs(x = "Vehicle Class", y = "Highway MPG") +
+ coord_flip()
+```
+
+### Exercise 7:
+
+```{r}
+mpg %>%
+ ggplot() + 
+ geom_boxplot(mapping=aes(x = class, y = hwy, fill = drv))
+```
+
+
+### Exercise 8:
+
+```{r}
+mpg %>%
+ ggplot(mapping = aes(x = displ, y = hwy)) + 
+ geom_point(aes(color = drv)) +
+ geom_smooth(aes(linetype = drv), se = FALSE, method = 'loess', formula = 'y ~ x')
+```
